# class

practical_live/level.3/DocManager/: pyproject.toml
practical_live/level_2/: pyproject.toml
practical_live/level_2/01-03-2026/: 01-03-2026.ipynb
practical_live/level_2/07-03-2026/: 07-03-2026.ipynb
practical_live/level_2/11-03-2026/: 11-03-2026.ipynb
practical_live/level_2/14-03-2026/: student_1.db
practical_live/level_2/15-02-2026/: 15-02-2026.11.ipynb  uv_project_creation_new_method.txt
practical_live/level_2/15-03-2026/: .env  15-03-2026.ipynb  main.py
practical_live/level_2/15-03-2026/resources/: database-3.md
practical_live/level_2/18-03-2026/: 18-03-2026.ipynb
practical_live/level_2/22-02-2026/: assignment.txt
practical_live/level_2/22-03-2026/: streamlit_learn.py
practical_live/level_2/28-02-2026/: github setup.txt
practical_live/level_2/Feb_26/15-02-2026/: 15-02-2026.ipynb
practical_live/level_2/Feb_26/18-02-2026/: 18-02-2026.ipynb
practical_live/level_2/Feb_26/21-02-2026/: 21-02-2026.ipynb
practical_live/level_2/Feb_26/22-02-2026/: 22-02-2026.ipynb
practical_live/level_2/Feb_26/28-02-2026/: 28-02-2026.ipynb
practical_live/level_2/Mar_26/08-03-2026-(cancelled)/: 08-03-2026.ipynb
practical_live/level_2/Mar_26/14-03-2026/: 14-03-2026.ipynb
practical_live/level_2/Mar_26/18-03-2026/: app.py
practical_live/level_3/: main.py  pyproject.toml
practical_live/level_3/Apr_26/04-04-2026/: 04-04-2026.ipynb
practical_live/level_3/Apr_26/05-04-2026/: 05-04-2026.ipynb
practical_live/level_3/Apr_26/11-04-2026/: 11-04-2026.ipynb
(+93 files in other folders)
